// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly image 1`] = `
<div
  className="panel"
>
  <div
    className="title"
  >
    OPTIONS
  </div>
  <ImageOptions
    elem={
      <img
        id="image"
      />
    }
    updateObjectPanel={[MockFunction]}
  />
</div>
`;

exports[`should render correctly in mobile image 1`] = `
<div
  className="container"
>
  <ObjectPanelDivider />
  <ImageOptions
    elem={
      <img
        id="image"
      />
    }
    updateObjectPanel={[MockFunction]}
  />
</div>
`;

exports[`should render correctly in mobile no element 1`] = `""`;

exports[`should render correctly in mobile others 1`] = `
<div
  className="container"
>
  <ObjectPanelDivider />
  <DummyInFillBlock
    elem={
      <xxx
        id="xxx"
      />
    }
  />
</div>
`;

exports[`should render correctly in mobile polygon desktop version 1`] = `
<div
  className="container"
>
  <ObjectPanelDivider />
  <PolygonOptions
    elem={
      <polygon
        id="polygon"
      />
    }
    polygonSides={8}
  />
</div>
`;

exports[`should render correctly in mobile polygon web version 1`] = `
<div
  className="container"
>
  <ObjectPanelDivider />
  <PolygonOptions
    elem={
      <polygon
        id="polygon"
      />
    }
    polygonSides={8}
  />
</div>
`;

exports[`should render correctly in mobile rect 1`] = `
<div
  className="container"
>
  <ObjectPanelDivider />
  <RectOptions
    elem={
      <rect
        id="rect"
      />
    }
    rx={null}
    updateDimensionValues={[MockFunction]}
  />
</div>
`;

exports[`should render correctly in mobile text 1`] = `
<div
  className="container"
>
  <ObjectPanelDivider />
  <TextOptions
    elem={
      <text
        id="text"
      />
    }
    textElement={
      <text
        id="text"
      />
    }
    updateDimensionValues={[MockFunction]}
    updateObjectPanel={[MockFunction]}
  />
</div>
`;

exports[`should render correctly no element 1`] = `""`;

exports[`should render correctly others 1`] = `
<div
  className="panel"
>
  <div
    className="title"
  >
    OPTIONS
  </div>
  <DummyInFillBlock
    elem={
      <xxx
        id="xxx"
      />
    }
  />
</div>
`;

exports[`should render correctly polygon desktop version 1`] = `
<div
  className="panel"
>
  <div
    className="title"
  >
    OPTIONS
  </div>
  <PolygonOptions
    elem={
      <polygon
        id="polygon"
      />
    }
    polygonSides={8}
  />
</div>
`;

exports[`should render correctly polygon web version 1`] = `
<div
  className="panel"
>
  <div
    className="title"
  >
    OPTIONS
  </div>
  <PolygonOptions
    elem={
      <polygon
        id="polygon"
      />
    }
    polygonSides={8}
  />
</div>
`;

exports[`should render correctly rect 1`] = `
<div
  className="panel"
>
  <div
    className="title"
  >
    OPTIONS
  </div>
  <RectOptions
    elem={
      <rect
        id="rect"
      />
    }
    rx={null}
    updateDimensionValues={[MockFunction]}
  />
</div>
`;

exports[`should render correctly text 1`] = `
<div
  className="panel"
>
  <div
    className="title"
  >
    OPTIONS
  </div>
  <TextOptions
    elem={
      <text
        id="text"
      />
    }
    textElement={
      <text
        id="text"
      />
    }
    updateDimensionValues={[MockFunction]}
    updateObjectPanel={[MockFunction]}
  />
</div>
`;
